--- a/fruit/app/views/layouts/application.html.erb
+++ b/fruit/app/views/layouts/application.html.erb
@@ -5,6 +5,10 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAlHk9Jd5VRwhdBEFg8X4HgWXt3b0p15Pc&sensor=false"></script>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script> -->
+  
+
 </head>
 <body>
 
