--- a/fruit/app/assets/stylesheets/application.css
+++ b/fruit/app/assets/stylesheets/application.css
@@ -20,10 +20,31 @@ html, body {
 
   margin: 0;
   padding: 0;
+
+  font-family: Arial, Helvetica, sans-serif; font-size: 1em; font-weight: 400;
+}
+
+.logocentered {
+  width: 333px; 
+  height: 128px; 
+  margin: 0 auto;
+  padding-bottom: 2%;
+}
+
+.centertext {
+  padding-top: 2%;
+  width: 80%; 
+  /*height: 128px;*/ 
+  margin: 0 auto;
+}
+
+.right {
+    float: right;
+    width: 300px;
 }
 
 #map {
-  height: 100%;
+  height: 50%;
   width: 100%;
 }
 
