--- a/fruit/app/views/carts/index.html.erb
+++ b/fruit/app/views/carts/index.html.erb
@@ -1,1 +1,3 @@
 <h1>carts index</h1>
+<%= link_to "log out", {:controller => 'sessions', :action => 'destroy'}%>
+<!-- <h1><%=@user.name%> users show page</h1> -->
