--- a/fruit/app/views/carts/index.html.erb
+++ b/fruit/app/views/carts/index.html.erb
@@ -1,3 +1,6 @@
-<h1>carts index</h1>
-<%= link_to "log out", {:controller => 'sessions', :action => 'destroy'}%>
-<!-- <h1><%=@user.name%> users show page</h1> -->
+<h3 class="tcenter">Welcome <%=@user.name.capitalize%>'s Fruit Cart Page</h3>
+
+
+
+<div id="map"></div>
+<button>Add a new fruit cart</button>
