--- a/fruit/app/views/users/new.html.erb
+++ b/fruit/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<div class="centertext">
-  <center>
+<div class="centertext formCenter">
+  <!-- <center> -->
 
     <%if @message %>
     <h3><%= @message %></h3>
@@ -29,6 +29,6 @@
       <br />
     <% end %>
     
-  </center>
+  <!-- </center> -->
 </div>
 
