--- a/fruit/app/views/carts/index.html.erb
+++ b/fruit/app/views/carts/index.html.erb
@@ -5,32 +5,32 @@
 <div id="map"></div>
 
 
-<form action="/carts" method="post">
-
+<form action="/carts/create" method="POST">
+ <!-- <input name="_method" type="hidden" value="patch" /> -->
  <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token%>"/>
 
  <label>
    Description
-   <input type="text" name="Description"/>
+   <input type="text" name="description"/>
  </label>
 
  <label>
    Closest Address
-   <input type="text" name="Address"/>
+   <input type="text" name="address"/>
  </label>
 
  <label>
    City
-   <input type="integer" name="City"/>
+   <input type="text" name="city"/>
  </label>
 
   <label>
    State
-   <input type="integer" name="State"/>
+   <input type="text" name="state"/>
  </label>
   <label>
    Zip
-   <input type="integer" name="Zip"/>
+   <input type="integer" name="zip"/>
  </label>
 
  <button>Save</button>
