--- a/fruit/app/views/carts/index.html.erb
+++ b/fruit/app/views/carts/index.html.erb
@@ -5,7 +5,8 @@
 <div id="map"></div>
 
 
-<form action="/carts/create" method="POST">
+<!-- <form action="/carts/create" method="POST"> -->
+<form action="/users/<%=@user.id%>/carts" method="POST">
  <!-- <input name="_method" type="hidden" value="patch" /> -->
  <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token%>"/>
 
@@ -32,6 +33,7 @@
    Zip
    <input type="integer" name="zip"/>
  </label>
+  <input type="hidden" name = "user_id" value= "<%=@user.id%>" />
 
  <button>Save</button>
 </form>
