--- a/fruit/app/views/carts/index.html.erb
+++ b/fruit/app/views/carts/index.html.erb
@@ -3,51 +3,31 @@
 
 
 <div id="map"></div>
+<br><br>
 
+<div class="middleCopy">
+  <!-- <form action="/carts/create" method="POST"> -->
+  <form class="pure-form"action="/users/<%=@user.id%>/carts" method="POST">
+   <!-- <input name="_method" type="hidden" value="patch" /> -->
+   <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token%>"/>
 
-<!-- <form action="/carts/create" method="POST"> -->
-<form action="/users/<%=@user.id%>/carts" method="POST">
- <!-- <input name="_method" type="hidden" value="patch" /> -->
- <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token%>"/>
+   <label>
+     Description
+     <input type="text" name="description"/>
+   </label>
 
- <label>
-   Description
-   <input type="text" name="description"/>
- </label>
+   <label>
+     Closest Address
+     <input type="text" name="address"/>
+   </label>
 
- <label>
-   Closest Address
-   <input type="text" name="address"/>
- </label>
+   <label>
+     City
+     <input type="text" name="city"/>
+   </label>
 
- <label>
-   City
-   <input type="text" name="city"/>
- </label>
+    <input type="hidden" name = "user_id" value= "<%=@user.id%>" />
 
-<!--   <label>
-   State
-   <input type="text" name="state"/>
- </label> -->
-
-  <label>State</label>
-
-
-
-  <select name="state">
-  <% @states.each do |state| %>
-  <option value='<%=state.name%>'> <%=state.name%></option>
-
-  <%end%>
-  </select>
-
-
-
-  <label>
-   Zip
-   <input type="integer" name="zip"/>
- </label>
-  <input type="hidden" name = "user_id" value= "<%=@user.id%>" />
-
- <button>Save</button>
-</form>
+   <button>Save</button>
+  </form>
+</div>
