a dash of styling

--- a/fruit/app/assets/stylesheets/application.css
+++ b/fruit/app/assets/stylesheets/application.css
@@ -17,18 +17,19 @@
 html, body {
   height: 100%;
   width: 100%;
+  background-image: url("fruit.jpg");
 
   margin: 0;
   padding: 0;
 
-  font-family: Arial, Helvetica, sans-serif; font-size: 1em; font-weight: 400;
+  font-family: 'Lato', Arial, Helvetica, sans-serif; font-size: 1em; font-weight: 400;
 }
 
 /* #typography
 ================================================== */
-h1 {font-family: 'Lato', Arial, Helvetica, sans-serif; font-size: 1.75em; font-weight: 700;}
+h1 {font-family: 'Lobster', Arial, Helvetica, sans-serif; font-size: 3em; font-weight: 700; color: #e40000; }
 h2 {font-family: 'Lato', Arial, Helvetica, sans-serif; font-size: 1.5em; font-weight: 400;  margin-top: 1%;}
-h3 {font-family: 'Lato', Georgia, "Times New Roman", Times, serif;font-size: 1.5em;font-weight: 100}
+h3 {font-family: 'Lato', Georgia, "Times New Roman", Times, serif;font-size: 1.5em;font-weight: 100;   -webkit-margin-before: 1em;}
 h4 {}
 .tcenter {text-align: center;}
 
@@ -36,7 +37,7 @@ h4 {}
   /*width: 300px; */
   width: 33%; 
   margin: 0 auto;
-  padding-bottom: 2%;
+  /*padding-bottom: 2%;*/
   /*border-style: solid;*/
 }
 
@@ -60,6 +61,10 @@ h4 {}
 
 .Fleft {
   float: left;
+}
+
+.greenStroke{
+  border: 2px solid green;
 }
 
 .centertext {
