--- a/fruit/app/views/carts/index.html.erb
+++ b/fruit/app/views/carts/index.html.erb
@@ -1,8 +1,8 @@
-<h3 class="tcenter">Welcome <%=@user.name.capitalize%>'s Fruit Cart Page</h3>
+<h1 class="tcenter">Welcome to <%=@user.name.capitalize%>'s Fruit Cart Page</h1>
 
 
 
-<div id="map"></div>
+<div class ="greenStroke" id="map"></div>
 <br><br>
 
 <div class="middleCopy">
