--- a/fruit/app/views/layouts/application.html.erb
+++ b/fruit/app/views/layouts/application.html.erb
@@ -6,7 +6,9 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyAlHk9Jd5VRwhdBEFg8X4HgWXt3b0p15Pc&sensor=true" %>
+
 <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 
 
 </head>
@@ -19,6 +21,7 @@
 
 <div class="logocentered">
 <%= image_tag "FruitFinder-logo.png", size: "300x135", alt: "Fruit Cart Finder Logo", :class => "logo" %>
+
 
 </div>
 
