removed the http to try to get the fonts working in heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,8 @@
   <%= csrf_meta_tags %>
   <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyAlHk9Jd5VRwhdBEFg8X4HgWXt3b0p15Pc&sensor=true" %>
 
-<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 
 
 </head>
